# SSL-Toolbox

./: .env.example  .gitignore  .gitleaks.toml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  accessone-verify.txt  azure-pipelines.yml  ldaps-bswh-use2-prod.prd01.radiantlogic.io-verify.txt
.claude/: settings.local.json
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
crates/ssl-toolbox/: Cargo.toml
crates/ssl-toolbox-ca/: Cargo.toml
crates/ssl-toolbox-ca-sectigo/: Cargo.toml
crates/ssl-toolbox-ca-sectigo/src/: lib.rs
crates/ssl-toolbox-ca/src/: lib.rs
crates/ssl-toolbox-core/: Cargo.toml
crates/ssl-toolbox-core/src/: cert_types.rs  config.rs  convert.rs  key_csr.rs  ldap.rs  lib.rs  pfx.rs  smtp.rs  tls.rs  validation.rs  x509_utils.rs
crates/ssl-toolbox-core/tests/: external_validation.rs
crates/ssl-toolbox-win-certstore/: Cargo.toml
crates/ssl-toolbox-win-certstore/src/: lib.rs  platform.rs
crates/ssl-toolbox-win-certstore/tests/: windows_live.rs
crates/ssl-toolbox/src/: audit.rs  display.rs  main.rs  settings.rs  win_certmgr.rs  workflow.rs
docs/: USER_MANUAL.md
docs/superpowers/boards/: 2026-04-10-windows-certificate-manager-execution-board.md  2026-04-15-interactive-workflow-hardening-execution-board.md
docs/superpowers/specs/: 2026-04-10-windows-certificate-manager-design.md  2026-04-17-hive-methodology-adoption-design.md
samples/: 121_chain_pre.pem  123_chain_pre.pem
src/: main.rs  openssl_utils.rs  sectigo.rs  tls_check.rs
