[package]
name = "cert-gen-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
cliclack = "0.3"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
indicatif = "0.17"
openssl = { version = "0.10", features = ["vendored"] }
tempfile = "3.8"
dotenvy = "0.15"
