[workspace]
resolver = "3"
members = [
    "crates/ssl-toolbox",
    "crates/ssl-toolbox-core",
    "crates/ssl-toolbox-ca",
    "crates/ssl-toolbox-ca-sectigo",
]

[workspace.package]
version = "0.2.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
cliclack = "0.3"
dotenvy = "0.15"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

ssl-toolbox-core = { path = "crates/ssl-toolbox-core" }
ssl-toolbox-ca = { path = "crates/ssl-toolbox-ca" }
ssl-toolbox-ca-sectigo = { path = "crates/ssl-toolbox-ca-sectigo" }
