[package]
name = "ssl-toolbox"
version.workspace = true
edition.workspace = true

[dependencies]
ssl-toolbox-core = { workspace = true }
ssl-toolbox-ca = { workspace = true }
ssl-toolbox-ca-sectigo = { workspace = true, optional = true }

anyhow.workspace = true
clap.workspace = true
cliclack.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true

[features]
default = ["sectigo"]
sectigo = ["dep:ssl-toolbox-ca-sectigo"]
